Version History
===============


Version 0.9.7 (unreleased)
--------------------------
* Arabic translation. (#257, thanks @Bashar)

Version 0.9.6
-------------
* Remove 'providing_args' kwarg from signals instanciation (#250, thanks @mondeja)
* Removed support and tests for Django <= 2.1
* Test against Python 3.9 (#251, thanks @mondeja)
* Upgraded Turkish translation (#253, thanks @realsuayip)
* Added support for Google Translation API  (#222, thanks @martinsvoboda)
* Test against Django 3.2


Version 0.9.5
-------------
* Fixed DeprecationWarning: invalid escape sequence (#234, Thanks @jayvdb)
* Fixed typo in documentation (#232, thanks @timgates42)
* Added Kyrgyz translation (#239,thanks @Soyuzbek)
* Ignore translator context hints checking unmatched variables (#238, #239, thanks @jeancochrane and @mondeja)
* Uncheck fuzzy on translation keyup instead of change (#235 @mondeja)
* Allow passing a function itself to the setting ROSETTA_ACCESS_CONTROL (#227, thanks @alvra)
* Dropped support for Django 1.11 and Python 2
* Test against Django 3.1a
* Do not show Rosetta link in admin panel if user has no access to translations (#240, thanks @mondeja)
* Django 3.1: force #changelist to display:block (#248 thanks @realsuayip and @mondeja)


Version 0.9.4
-------------
* Added ROSETTA_SHOW_OCCURRENCES: Option to hide file name & path (#77, PR #221, thanks @sarathak)
* Unfuzzy fuzzy entries when the translation is changed (#16, PR #220, thanks @sarathak)
* Updated spanish translation (#230, thank you @mondeja)
* Test against Django 3.0 and Python 3.8


Version 0.9.3
-------------
* Added a tooltip to explain fuzzy entries (#206)
* New ROSETTA_LANGUAGES setting allows for translating languages which are not yet in LANGUAGES (#219)
* Fix for duplicate PO files listed on case insensitive filesystems (#47, #52, #218, thanks @malkstar)


Version 0.9.2
-------------
* Cleanup of imports, and use relative imports. Hopefully fixes #209.
* Travis: cleanup and test with Python 3.7
