@@ -5,6 +5,8 @@ Version History
 Version 0.9.7 (unreleased)
 --------------------------
 * Arabic translation. (#257, thanks @Bashar)
+* Translations via the DeepL API (#258, thanks @halitcelik)
+
 
 Version 0.9.6
 -------------
